--- a/main.css
+++ b/main.css
@@ -1,185 +1,71 @@
-  /* 
-    used flex box for header
-    NO flex box for navigation because they are in list
-    used flex box for body part
-    used flex box for footer 
-    */
-
-html,body{
-    margin: 0;
-    height: 100%;
-    overflow-x: hidden;
+body{
+    background-color: lightgoldenrodyellow;
 }
-.head-portion{
-    background-color: rgb(255, 253, 232);
-    height: 5rem;
-    display: flex;
-    flex-direction: column;
-}
-.head-portion > div{
-    position: relative;
-    left: 150px;
-    line-height: 0rem;
-}
-.nav-portion{
-    background-color: rgb(255, 255, 255);
-    height: 50px;
-}
-.nav-portion > div {
-    position: relative;
-    left: 150px;  
-}
-a{
-    padding: 6px;
-}
-a:link{
-    text-decoration: none;
-}
-a:hover{
-    font-size: 1.2rem;
-    color: salmon;
-}
-.nav-item > ul > li{
-    display: inline;
-    margin: 0em;
-}
-.image-portion img{
-    width: 100%;
-    height: 300px;
-}
-.headings-text{
-    font-size: 1.4rem;
-    font-weight: bold;
-}
-.document-part{
-    position: relative;
-    left: 150px; 
-    display: flex;
-    flex-direction: row;
+div.wrap{
+    width:800px;
+    margin: 0 auto;  
 }
 .left-col{
-    font-size: 0.9rem;
-    width:300px;  
+    float:left;
+    width:400px;
 }
 .right-col{
-    margin-left: 6rem;
-    width:600px;
-    font-size: 1.1rem;    
+    float:right;
+    width:400px;
 }
-.cell{
-     width: 4rem;
-     height: 4rem;
-     padding: 2rem;
+.profile-pic{
+    display: block;
+    margin: auto;
 }
-p{
-    text-align: justify;
+h1{
+    text-align: center;
+    color: crimson;
+    font-weight: bolder;
+    font-style: normal;
+    text-decoration: underline;
 }
-.footer-portion{
-    background-color: rgb(54, 54, 151);
-    color:white;    
+h3{
+    text-align: center;
+    color: forestgreen;
+    font-weight: bold;
 }
-.footer-part{    
-    position: relative;
-    left: 150px; 
-    display: flex;
-    flex-direction: row;
+div.section-heading{
+color: rgb(248, 14, 248);
 }
-
-.footer-details2{
-    margin-left: 7em;
+p.body-text{
+    color:black;
+    font-family: sans-serif;
 }
-.footer-details3{
-    margin-left: 6em;
-}
-.footer-details4{
-    margin-left: 6em;
-}
-ul{
+.list-no-bullets{
+    list-style: none;
+    text-align: left;
     padding-left: 0px;
 }
-ul li{
-    list-style: none;
-    font-size: 18px;
+ul{
+    font-family: sans-serif;
 }
-.footer-heading{
-    color: white;
-    font-size: 1.2rem;
-    margin-top: 1.2rem;
+a{
+    text-decoration: underline;
 }
+.logo-dimenssions{
+    width: 30px;
+    height: 30px;
+}
+a:hover {
+    color: rgb(55, 10, 161); /* color link element when mouse over*/
+    font-size: 20px; /* increase font size on mouse over */
+  }
+section:hover{
+    color: rgb(132, 50, 122);
+    font-size: 20px;
+}
+/*psuedo-element
+to mark the text in yellow and background color red
+when the text is selected using mouse
+*/
+::selection {
+    background-color: red;
+    color: yellow;
+  }
 
-@media only screen and (max-width: 600px){
-    .head-portion{
-        background-color: rgb(104, 235, 159);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .head-portion > div{
-        position: relative;
-        left: 0rem;
-        /* line-height: 0rem; */
-    }
-    h1{
-        font-size: 1.2vw;
-    }
-    .nav-portion{
-        background-color: rgb(24, 53, 43);
-        display: flex;
-        height: 100px;
-        flex-direction: column;
-        justify-content: left;
-    }
-    .nav-portion > div{
-        left: 0px;
-        
-    }
-    .nav-item > ul > li{
-        display: list-item;
-        line-height: 1.2rem;
-    }
-    .image-portion img{
-        width: 100%;
-        height: 300px;
-    }
-    .document-part{
-        width:100%;
-        position: relative;
-        left: 0px;
-        display: flex;
-        flex-direction: column;
-    }
-    .left-col{
-        position: relative;
-        left: 0px;
-        width: 100%;
-        font-size: 1rem;    
-    }
-    .right-col{
-        position: relative;
-        left: 0px;
-        margin-left: 0rem;
-        width: 100%;
-        font-size: 1rem;    
-    }
-    .footer-part{
-        position: relative;
-        left: 1rem; 
-        display: flex;
-        flex-direction: column;
-    }
-    .footer-details2{
-        margin-left: 0em;
-    }
-    .footer-details3{
-        margin-left: 0em;
-    }
-    .footer-details4{
-        margin-left: 0em;
-    }
-    .footer-horizantal-line{
-        display: none;
-    }
-    .footer-heading{
-        color: indianred;
-    }
-}
+
